--- a/app/src/main/res/drawable/btn_secundary.xml
+++ b/app/src/main/res/drawable/btn_secundary.xml
@@ -2,6 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
 
-    <solid android:color="@color/red_buttons" />
-    <corners android:bottomRightRadius="14dp" />
+    <stroke
+        android:color="@color/red_buttons"
+        android:width="1dp" />
+
+    <corners android:radius="8dp" />
+
 </shape>
