--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -7,9 +7,12 @@
     android:background="#E6E6E6">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/CardCar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="14dp"
         app:cardElevation="6dp"
